fix bug not visible images on the mobile devices

--- a/src/pages/portfolio-collection/portfolio-collection_Media.scss
+++ b/src/pages/portfolio-collection/portfolio-collection_Media.scss
@@ -11,10 +11,10 @@
             gap: 2rem;
         }
         &__photo {
-            height: auto;
             width: 100%;
         }
         &__wrapper-photo {
+            height: max-content;
             width: 80vw;
         }
     }
